# cxr-lt-diss

./: .gitignore  README.md  download_khub.py  download_mimic_cxr.py  download_mimic_cxr.sh  download_mimic_cxr_gc.py  download_mmcxr.py  main.py  prelim_analysis.ipynb  pretrain_datasets.ipynb  pyproject.toml  pytorch-jupyter-gpu.sh  save_backbone.py  save_model.py  train.sh  train_full.py  train_full_apptainer.py  train_full_docker.py  vinbig_data_convert.py
configs/: config-nih.yaml  config-stage-2-pred.yaml  config-stage-2.yaml  config-vinbig.yaml  config.yaml
configs/task1/: config-nih.yaml  config-stage-2-pred.yaml  config-stage-2.yaml  config-vinbig.yaml  config.yaml
configs/task2/: config-nih.yaml  config-stage-2-pred.yaml  config-stage-2.yaml  config-vinbig.yaml  config.yaml
configs/task3/: config-nih.yaml  config-stage-2-pred.yaml  config-stage-2.yaml  config-vinbig.yaml  config.yaml
containers/: DockerFile  pytorch_25.05-py3-uv.def
docs/: doer.qmd  refs.bib
scripts/: predict_final.sh  train_backbone.sh  vinbig_data_convert.sh
src/: losses.py  types.py  util.py
src/callbacks/: chexpert_pseudo_callback.py  nih_pseudo_callback.py  task1_callback.py  task2_callback.py  task3_callback.py  vinbig_pseudo_callback.py
src/datasets/: chexpert.py  cxr_lt_24.py  datamodule.py  nih_cxr.py  transforms.py  vinbig_cxr.py
src/medvit/: medvit.py  utils.py
src/models/: chexfusion.py  layers.py  ml_decoder.py
src/utils/: __init__.py  class_counts.py  config_generator.py  directory_manager.py  experiment_config.py  runner_utils.py  (+2 more)
submissions/: preds1.txt
(+34 files in other folders)
