[project]
name = "dissertation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "beautifulsoup4>=4.13.4",
    "einops>=0.8.1",
    "google-cloud-storage>=3.1.0",
    "httpx>=0.28.1",
    "iterative-stratification>=0.1.9",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.12",
    "lightning[pytorch-extra]>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "neptune>=1.14.0",
    "neptune-scale>=0.16.0",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "positional-encodings[pytorch]>=6.0.4",
    "pydicom>=3.0.1",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "timm>=1.0.15",
    "torchmetrics>=1.7.3",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
